Fix overflowing of text on Safari

--- a/src/www/blog/site/.vuepress/theme/styles/util.styl
+++ b/src/www/blog/site/.vuepress/theme/styles/util.styl
@@ -117,3 +117,7 @@ spacing-utils(auto);
   margin: 0;
   padding: 0;
 }
+
+.u-overflow-x-hidden {
+  overflow-x: hidden;
+}
